--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,7 +8,7 @@ on:
 env:
   PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
   GKE_CLUSTER: demo-gke-iris-cluster
-  GKE_ZONE: us-central1-a
+  GKE_ZONE: us-central1
   DEPLOYMENT_NAME: demo-iris-workload
   SERVICE_NAME: iris-api-service
   
